Added navbuttons & navlinkbuttons

--- a/Personal Site/index.html
+++ b/Personal Site/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="font-[K2D] bg-gradient-to-r from-darkBlue from-50% to-mediumBlue to-100%">
+  <body class="font-[K2D] text-white bg-gradient-to-r from-darkBlue from-50% to-mediumBlue to-100%">
     <div id="root" ></div>
     <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
