script source fix

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="font-[K2D] text-white bg-gradient-to-r from-darkBlue from-10% via-mediumBlue via-50% to-darkBlue to-90%">
     <div id="root" ></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
     
   </body>
 </html>
