title & icon change on head

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/K-icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Ken Lin</title>
   </head>
   <body class="font-[K2D] text-white bg-gradient-to-r from-darkBlue from-10% via-mediumBlue via-50% to-darkBlue to-90%">
     <div id="root" ></div>
